@@ -1,0 +1,61 @@
+################################################################################
+## Akeeba Panopticon – Docker environment variables
+##
+## -----------------------------------------------------------------------------
+##
+## To use this file, copy it to .env.docker and edit it.
+##
+## -----------------------------------------------------------------------------
+##
+################################################################################
+
+##
+## Environment variables configuring the creation of and connection to the Panopticon database.
+##
+# The name of the MySQL database. Best leave it as-is.
+MYSQL_DATABASE: "panopticon"
+# The name of the MySQL user. Best leave it as-is.
+MYSQL_USER: "panopticon"
+# The password of the MySQL user. You SHOULD change this to something random. You can create a random password here:
+# https://www.random.org/passwords/?num=1&len=32&format=html&rnd=new
+MYSQL_PASSWORD: "Emx6Rf9mtneXNgpZyehvdm8NUJJMJQA8"
+# Default MySQL timezone, see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+TZ: "Asia/Nicosia"
+# Instructs the MySQL container to create a random root user password.
+MYSQL_RANDOM_ROOT_PASSWORD: "yes"
+
+##
+## Environment variables configuring Panopticon itself
+##
+# How many CRON jobs would you like in your container
+PANOPTICON_CRON_JOBS: 1
+# The name of the container where the database server lives in. Do not change.
+PANOPTICON_DB_HOST: "mysql"
+# The database table prefix. Two to five lowercase letters and/or numbers, followed by an underscore.
+# It must NOT start with a number. Best leave it as-is.
+PANOPTICON_DB_PREFIX: "pnptc_"
+# Your username. You should change this.
+ADMIN_USERNAME: "admin"
+# Your password. Best create a random one here: # https://www.random.org/passwords/?num=1&len=32&format=html&rnd=new
+ADMIN_PASSWORD: "admin"
+# Your full name.
+ADMIN_NAME: "Super Administrator"
+# Your email address.
+ADMIN_EMAIL: "admin@example.com"
+
+##
+## Environmetn variables for Caddy configuration
+##
+## Only applicable to the FrankenPHP variant.
+##
+## Global Caddy options, see https://caddyserver.com/docs/caddyfile/options – parsed before the frankenphp global option
+#CADDY_GLOBAL_OPTIONS: ""
+## FrankenPHP config options, see https://frankenphp.dev/docs/config/#environment-variables
+## NOTE: You should NOT need that to run Panopticon
+#FRANKENPHP_CONFIG: ""
+## Like CADDY_GLOBAL_OPTIONS, but they are parsed AFTER the frankenphp global option
+#CADDY_EXTRA_CONFIG: ""
+## The hostname of the server. Default to localhost
+#SERVER_NAME: "localhost"
+## Caddy directives located inside the default domain section
+#CADDY_SERVER_EXTRA_DIRECTIVES: ""
