@@ -9,12 +9,15 @@ defined('AKEEBA') || die;
 
 /** @var \Akeeba\Panopticon\View\Selfupdate\Html $this */
 ?>
+
 @if ($this->updateInformation->stuck)
     @include('Selfupdate/default_stuck')
 @elseif (!$this->updateInformation->loadedUpdate)
     @include('Selfupdate/default_not_loaded')
 @elseif (!$this->hasUpdate)
     @include('Selfupdate/default_noupdate')
+@elseif(defined('APATH_IN_DOCKER') && APATH_IN_DOCKER)
+    @include('Selfupdate/default_docker')
 @else
     @include('Selfupdate/default_update')
 @endif
