@@ -1411,6 +1411,9 @@ PANOPTICON_SELFUPDATE_LBL_PHPINFO_NOT_AVAILABLE="<code>phpinfo()</code> is not a
 PANOPTICON_SELFUPDATE_LBL_PHPINFO_NOT_AVAILABLE_INFO="Your server operator has disabled the built-in <code>phpinfo()</code> PHP function. Panopticon cannot display detailed PHP information on your server."
 PANOPTICON_SELFUPDATE_LBL_LAST_CHECK_AND_VERSION="Last checked for updates on %s. The latest version is %s."
 PANOPTICON_SELFUPDATE_BTN_RUN_POSTUPGRADE="Run the Post-upgrade code"
+PANOPTICON_SELFUPDATE_ERR_UNDERDOCKER="You cannot take this action when running Panopticon under Docker. Please refer to our documentation for the correct update instructions for this use case."
+PANOPTICON_SELFUPDATE_LBL_DOCKER_HEAD="You are running Panopticon under Docker"
+PANOPTICON_SELFUPDATE_LBL_DOCKER_BODY="Panopticon cannot be updated directly from its interface when it runs under Docker. Instead, you need to follow the <a href='%s'>documentation instructions</a> to update the container, and the database."
 
 [Groups]
 PANOPTICON_GROUPS_TITLE="Groups"
