@@ -454,7 +454,7 @@ class Setup extends Model
 
 		if (function_exists('opcache_invalidate'))
 		{
-			opcache_invalidate(APATH_ROOT . '/config.php', true);
+			opcache_invalidate(APATH_CONFIGURATION . '/config.php', true);
 		}
 	}
 
